Revision history for Perl extension Test::TCP

{{$NEXT}}

2.00 2013-06-11T04:41:43Z

    [INCOMPATIBLE CHANGES]
    - Change wait_port() API to take max_wait seconds, and wait exponentially.
      Dropped wait_port_retry argument introduced at 1.27.
      (miyagawa)

1.30 2013-06-03T05:06:28Z

    - Increase the default sleep and retry: 0.01 sec and 1000 times
      (miyagawa)

1.29 2013-05-29T01:12:47Z

    - Care the `test_tcp(port => undef)` case.
      https://github.com/tokuhirom/Test-TCP/issues/13

1.28 2013-05-28T11:14:27Z

    - Added wait_port_sleep and wait_port_retry option for
      Test::TCP::wait_port, Test::TCP#new, test_tcp().
      (tokuhirom)

1.27 2013-05-15T10:13:18Z

    - export wait_port from Net::EmptyPort
      (Pavel Shaydo)
    - Make default wait_port() sleeping time shorter.
      0.1sec => 0.0001sec.
      (tokuhirom)

1.26 2013-03-29T08:46:20Z

    - Remove unused deps from cpanfile.

1.25 2013-03-29T08:07:24Z

    - re packaging, again & again

1.24 2013-03-28T02:49:32Z

    - re-packing, again.


1.23 2013-03-27T01:37:08Z

    - Just re-packaging

1.22 2013-03-27T01:17:38Z

    - Add doc for Test::TCP::CheckPort
      (Tatsuhiko Miyagawa)
    - revert b4fc237697648234c960f6714d995210d4250e42 to fix Win32 breakage
      Test::TCP::CheckPort must be used on win32 because it prints to STDOUT
      (Christian Walde)
    - Add UDP support to Net::EmptyPort
      (Brendan Byrd)

1.21 2013-03-03T12:33:49

    - Added Net::EmptyPort::wait_port()
      (tokuhirom)

1.20 2013-03-02T18:30:25

    - bump up version

1.19 2013-02-27T14:02:13

    - Split empty_port() function to Net::EmptyPort
      (Thomas Klausner)

1.18

    - Added more documentation about empty_port()

1.17

    commit 0f4510d83ae2f2ce112288c64289fa36d32865b3
    Author: Christian Walde <walde.christian@googlemail.com>
    Date:   Sat Jul 28 07:04:40 2012 +0200

        fix port checking on Win32 by performing it in another process
        